[metadata]
name = sesame
version = 0.1.0
author = Maxwell Kaye 
author_email = maxwell.kaye@mail.mcgill.ca 
description = A Python package for Sesame toolbox
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
include_package_data = true

[options.extras_require]
dev =
    pytest

[coverage:run]
branch = True

